# guile-sqlite3

./: .#configure.ac  .gitignore  AUTHORS  Makefile.am  README  README.md  configure.ac  sqlite3.scm  sqlite3.scm.in
build-aux/: guile.am
tests/: basic.scm  basic.test
